test_suite/alan-2022-examples/failing/005260_mutation.alan
source q271 begin leave _zkr rem / G end
